--- a/main.css
+++ b/main.css
@@ -691,6 +691,7 @@ ul.icon-list {
     height: 55rem;
     transition: all 0.25s ease-in;
     transform: translateX(0);
+    overflow: hidden;
 }
 
 @media only screen and (max-width: 1000px) {
@@ -710,8 +711,10 @@ ul.icon-list {
        
 }
 
-@media only screen and (max-width: 650px) {
+@media only screen and (max-width: 800px) {
     .slider .box {
+        height: 90%;
+        
         grid-template-columns: 1fr;
         grid-template-rows: repeat(2, 1fr);
     }
@@ -865,10 +868,11 @@ ul.icon-list {
 }
 
 .slider .illustration div {
-    height: 30rem;
-    width: 40rem;
+    height: 35rem;
+    width: 45rem;
+    margin-bottom: 5rem;
     border-radius: 1rem;
-        position: relative;
+    position: relative;
     transform: translateX(-45px);
     
     box-shadow: 0px 17px 28px -13px rgba(0,0,0,0.28);
@@ -877,14 +881,26 @@ ul.icon-list {
 
 @media only screen and (max-width: 800px) {
     .slider .illustration div {
-        height: 30rem;
-        width: 35rem;
-        transform: none;
+        border-radius: none;
+        height: 25rem;
+        width: 30rem;
+        transform: translateX(15px);        
+
+    }
+}
+@media only screen and (max-width: 650px) {
+    .slider .illustration div {
+        border-radius: none;
+        height: 25rem;
+        width: 25rem;
+        /* transform: translateX(15px);         */
 
     }
 }
 
-.slider .illustration div::after,
+
+
+/* .slider .illustration div::after,
 .slider .illustration div::before {
     content: "";
     position: absolute;
@@ -893,7 +909,7 @@ ul.icon-list {
     border-radius: 3rem;
     top: 0;
     left: 0;
-}
+} */
 
 /* .slider .illustration div::after {
     transform: translate(4rem, -1rem);
@@ -947,9 +963,9 @@ ul.icon-list {
     bottom: 5%;
     left: 50%;
     transform: translateX(-50%);
-    width: 60%;
+    width: 50%;
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(6, 1fr);
     gap: 1rem;
     text-align: center;
     font-size: 1.5rem;
@@ -1030,6 +1046,7 @@ textarea {
 }
 
 .link-contact {
+    margin: 0.5rem;
     font-size: 1.4rem;
     background-color: var(--second-gd-color);
     color: #eee;
@@ -1042,10 +1059,20 @@ textarea {
     box-shadow: 2px 17px 13px -6px rgba(0, 0, 0, 0.18);
 }
 
+@media only screen and (max-width: 900px) {
+    .link-contact {
+       display: inline-block; 
+     
+
+    }
+}
+
 .link-contact:hover {
     color: #221e3f;
     background-color: var(--main-gd-color);
 }
+
+
 
 
 /*End contact*/
